Revert Java and Error Prone